ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shortlet-ingress
  namespace: shortlet
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: timeapi.nayokians.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: timeserver-api-svc
                port:
                  number: 80

  tls:
  - hosts:
    - timeapi.nayokians.me
    secretName: shortlet-tls
